# Game-Development

Space_Invaders/: README.md
Space_Invaders/headers/: alien.hpp  block.hpp  game.hpp  laser.hpp  mysteryship.hpp  spaceship.hpp
Space_Invaders/neural-network/: matrix.hpp
Space_Invaders/neuralNetwork/: CMakeCache.txt  CMakeLists.txt  Makefile  build.ninja  cmake_install.cmake
Space_Invaders/neuralNetwork/include/: layer.hpp  matrix.hpp  neuralnet.hpp  neuron.hpp
Space_Invaders/neuralNetwork/include/utils/: matrixMultiply.hpp  matrixToVector.hpp
Space_Invaders/neuralNetwork/src/: layer.cpp  main.cpp  matrix.cpp  matrixMultiply.cpp  matrixToVector.cpp  neuralnet.cpp  neuron.cpp
Space_Invaders/src/: alien.cpp  barrier.cpp  barrier.hpp  block.cpp  block.hpp  game.cpp  game.hpp  laser.cpp  laser.hpp  main.cpp  mysteryship.cpp  spaceship.cpp  spaceship.hpp
text-based-game/: .project  pom.xml
text-based-game/src/main/java/com/mycompany/app/: ButtonHandler.java  ChoiceHandler.java  Direction.java  Game.java  GameMap.java  Inventory.java  Item.java  Location.java  Monster.java  Player.java  UI.java
